# student-personalizer

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  plan.md  specs.md
client/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  components.json  index.html  nginx.conf  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
data/: avg_grades.xlsx  events.xlsx  (+2 more)
server/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  README_MIGRATIONS.md  alembic.ini  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  test_ingestion.ipynb
server/alembic/: env.py
server/scripts/: tune_model.py  wipe_db.py
server/src/: __init__.py  auth.py  config.py  constants.py  database.py  dependencies.py  logging_config.py  main.py  models.py  seed.py
server/src/audit/: models.py  service.py
server/src/auth/: authorize.py  current_user.py  dependencies.py  mfa.py  models.py  password.py  permissions.py  refresh_cookie.py  router.py  schemas.py  schools.py  service.py  sso.py  sso_exchange.py  tokens.py
server/src/crypto/: encrypted_type.py  field_encryption.py
server/src/integrations/: __init__.py  virustotal.py
server/src/middleware/: rate_limit.py  request_log.py  security_headers.py
server/src/routers/: advanced_analytics.py  analytics.py  auth.py  classes.py  config.py  debug.py  ingestion.py  ml.py  open_day.py  students.py  subjects.py  teachers.py
server/src/schemas/: __init__.py  advanced_analytics.py  analytics.py  auth.py  ingestion.py  ml.py  open_day.py  student.py  subject.py
server/src/services/: advanced_analytics.py  analytics.py  base.py  classes.py  data_generator.py  ingestion.py  ml.py  ml_privacy.py  open_day.py  students.py  subjects.py  teachers.py
server/src/utils/: clock.py  file_validation.py  stats.py
server/src/views/: analytics.py  base.py  classes.py  masking.py  students.py  subjects.py  teachers.py
server/tests/: __init__.py  conftest.py  conftest_security.py  test_api.py  test_audit.py  test_auth.py  test_dashboard.py  test_ingestion.py  test_ml.py  test_rbac.py  test_security_headers.py  test_virustotal.py
(+127 files in other folders)
