[project]
name = "server"
version = "0.1.0"
description = "Student Personalizer API Server"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlmodel>=0.0.22",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "numpy>=2.4.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-json-logger>=3.3.0",
    "cryptography>=44.0.0",
    "pydantic-settings>=2.0",
    "slowapi>=0.1.9",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "authlib>=1.5.0",
]

[dependency-groups]
dev = ["ruff", "pytest", "bandit", "pip-audit", "poethepoet"]

[tool.uv]
package = false

[tool.poe.tasks]
dev = "python -m src.main"
lint = "ruff check src/"
test = "pytest tests/ -v --tb=short"
test-verbose = "pytest tests/ -v"
check = ["lint", "test"]
bandit = "bandit -r src/ -ll -x src/debug"
pip-audit = "pip-audit --skip-editable"

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# FastAPI uses callables in defaults (Depends, Query, Body, …).
ignore = ["E501", "B008"]
